@@ -10,26 +10,17 @@ INTRODUCTION
  plural handling, and build process integration through Maven.
 
  A tutorial that describes how to use the Gettext Commons is available
- at http://xnap-commons.sourceforge.net/gettext-commons/tutorial.html .
+ at http://code.google.com/p/gettext-commons/wiki/Tutorial .
 
 
 REQUIREMENTS
 
  * Java 1.3 (or higher)
 
- If you use Maven 1.x to handle your dependencies, add the following
- entries to your project.xml (replace 0.9.x with the latest release):
 
-  <dependency>
-    <groupId>gettext-commons</groupId>
-	<artifactId>gettext-commons</artifactId>
-    <version>0.9</version>
-    <url>http://xnap-commons.sf.net/gettext-commons/</url>
-  </dependency>
- 
- And add the XNap Commons repository to your project.properties:
+DEVELOPMENT
 
-  maven.repo.remote = http://www.ibiblio.org/maven,http://xnap-commons.sf.net/repository
+ Apache Maven 2.0 can be used to build the Gettext Commons.
 
 
 COPYRIGHT
@@ -52,19 +43,3 @@ COPYRIGHT
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  Lesser General Public License for more details.
-
-
-DEVELOPMENT
-
- The Gettext Commons can be built with Maven 1.x
- (http://maven.apache.org/maven-1.x/):
-
- * Create a jar file     : maven jar
- * Generate documentation: maven site:generate
- * Clean generated files : maven clean
-
- See Maven documentation for more information.
-
-KNOWN BUGS
-
- None.
